--- a/src/app/components/companyreviews/companyreviews.component.html
+++ b/src/app/components/companyreviews/companyreviews.component.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="companyreviews.CompanyId" class="form-control"> 
-                            <option  *ngFor="let item of companyData" value="{{item.Id}}">{{item.CompanyName}}</option>
+                            <option  *ngFor="let item of companyData" value="{{item.Id}}">{{item.Name}}</option>
                         </select>
                         <!-- <input type="number" id="txtskill" class="form-control" Name="txtskill"
                             [(ngModel)]="companyreviews.CompanyId" placeholder="CompanyId"> -->
