--- a/src/app/components/institutions/institutions.component.html
+++ b/src/app/components/institutions/institutions.component.html
@@ -20,7 +20,7 @@
 
                         <select name="" id="" name="Qualificationtype" [(ngModel)]="institutions.QulificationTypeId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of qulificationtypeData" value="{{item.Id}}" > {{item.QulificationName}} </option>
+                            <option *ngFor="let  item of qulificationtypeData" value="{{item.Id}}" > {{item.Name}} </option>
                         </select>
                         <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
                             [(ngModel)]="institutions.QulificationTypeId" placeholder="QualificationtypeId" /> -->
