--- a/src/app/components/useremails/useremails.component.html
+++ b/src/app/components/useremails/useremails.component.html
@@ -27,17 +27,18 @@
                         Email :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" name="txtcode" id="txtcode" class="form-control"
+                        <input type="text" name="txtEmail" id="txtEmail" class="form-control"
                             [(ngModel)]="useremails.Email" placeholder="Email" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        IsPrimary :
+                        Primary :
                     </div>
                     <div class="col-md-3">
-                        <input type="checkbox" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="useremails.IsPrimary" placeholder="IsPrimary" />
+                        
+                        <input type="checkbox" name="txtPrimary" id="txtPrimary" checked data-toggle="toggle" data-size="sm"
+                            [(ngModel)]="useremails.IsPrimary" placeholder="Primary" />
                     </div>
 
                     <br><br>
