--- a/src/app/components/users/users.component.css
+++ b/src/app/components/users/users.component.css
@@ -1,3 +1,10 @@
 .mrg-rgt{
     margin-right: 10px;
 }
+
+.scrolls {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    
+    white-space: nowrap;
+}
