--- a/src/app/components/userskills/userskills.component.html
+++ b/src/app/components/userskills/userskills.component.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="col-md-3">
                         <select name="" id=""  [(ngModel)]="userskills.SkillId" class="form-control"> 
-                            <option  *ngFor="let item of skillsData" value="{{item.Id}}">{{item.SkillName}}</option>
+                            <option  *ngFor="let item of skillsData" value="{{item.Id}}">{{item.Name}}</option>
                         </select>
                         <!-- <input type="number" name="txtcode" class="form-control" id="txtcode" [(ngModel)]="userskills.SkillId" placeholder="SkillId" /> -->
                     </div>
