--- a/src/app/components/vacancies/vacancies.component.html
+++ b/src/app/components/vacancies/vacancies.component.html
@@ -37,7 +37,7 @@
           <div class="col-md-3">
             <select name="" id="" [(ngModel)]="vacancies.CompanyId" class="form-control">
               <option value="0">Select</option>
-                            <option *ngFor="let  item of companyData" value="{{item.Id}}">{{item.CompanyName}}</option>
+                            <option *ngFor="let  item of companyData" value="{{item.Id}}">{{item.Name}}</option>
             </select>
             <!-- <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.CompanyId" placeholder="CompanyId"/> -->
           </div>
