--- a/src/app/components/vacanciesskill/vacanciesskill.component.html
+++ b/src/app/components/vacanciesskill/vacanciesskill.component.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-md-3">
                       <select name="" id="" [(ngModel)]="vacanciesskill.SkillId" class="form-control"> 
-                        <option  *ngFor="let item of skillsData" value="{{item.Id}}">{{item.SkillName}}</option>
+                        <option  *ngFor="let item of skillsData" value="{{item.Id}}">{{item.Name}}</option>
                     </select>
                       <!-- <input type="text" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacanciesskill.SkillId" placeholder="SkillId"/> -->
                     </div>
