--- a/src/app/components/companyaddress/companyaddress.component.html
+++ b/src/app/components/companyaddress/companyaddress.component.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="companyaddress.CompanyId" class="form-control"> 
-                            <option  *ngFor="let item of companyData" value="{{item.Id}}">{{item.CompanyName}}</option>
+                            <option  *ngFor="let item of companyData" value="{{item.Id}}">{{item.Name}}</option>
                         </select>
                         
                         <!-- <input type="number" id="txtskill" class="form-control" Name="txtskill"
@@ -53,7 +53,7 @@
                     </div>
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="companyaddress.StateId" class="form-control"> 
-                            <option  *ngFor="let item of statesData" value="{{item.Id}}">{{item.StateName}}</option>
+                            <option  *ngFor="let item of statesData" value="{{item.Id}}">{{item.Name}}</option>
                         </select>
                         <!-- <input type="number" id="txtskill" class="form-control" Name="txtskill"
                             [(ngModel)]="companyaddress.StateId" placeholder="InstitutionName"> -->
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="companyaddress.CountryId" class="form-control"> 
-                            <option  *ngFor="let item of countriesData" value="{{item.Id}}">{{item.CountryName}}</option>
+                            <option  *ngFor="let item of countriesData" value="{{item.Id}}">{{item.Name}}</option>
                         </select>
                         <!-- <input type="number" name="txtcode" class="form-control" id="txtcode" [(ngModel)]="companyaddress.CountryId" placeholder="QualificationtypeId" /> -->
                     </div>
