--- a/src/app/components/coutrystates/coutrystates.component.html
+++ b/src/app/components/coutrystates/coutrystates.component.html
@@ -12,7 +12,7 @@
                     <div class="col-md-3">
                         <select name="" id="" name="" [(ngModel)]="coutrystates.StateId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of statesData" value="{{item.Id}}" > {{item.StateName}} </option>
+                            <option *ngFor="let  item of statesData" value="{{item.Id}}" > {{item.Name}} </option>
                         </select>
                         
                         <!-- <input type="number" id="txtskill" class="form-control" Name="txtskill"
@@ -24,7 +24,7 @@
                     <div class="col-md-3">
                         <select name="" id="" name="" [(ngModel)]="coutrystates.CountryId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of countriesData" value="{{item.Id}}" > {{item.CountryName}} </option>
+                            <option *ngFor="let  item of countriesData" value="{{item.Id}}" > {{item.Name}} </option>
                         </select>
                         <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
                             [(ngModel)]="coutrystates.CountryId" placeholder="CountryId" /> -->
