--- a/src/app/components/designation/designation.component.html
+++ b/src/app/components/designation/designation.component.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="col-md-3">
                         <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="designation.DesignationName" placeholder="DesignationName">
+                            [(ngModel)]="designation.Name" placeholder="DesignationName">
                     </div>
                     <div class="col-md-3">
                         Code :
@@ -60,7 +60,7 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.DesignationName}}</td>
+                                        <td>{{item.Name}}</td>
                                         <td>{{item.Code}}</td>
                                         <td><button class="btn btn-info" (click)="GetDesignationById(item.Id)"> Edit
                                             </button></td>
