--- a/src/app/components/family/family.component.html
+++ b/src/app/components/family/family.component.html
@@ -43,7 +43,7 @@
                     <div class="col-md-3">
                         <select  id="" name="" [(ngModel)]="family.RelationTypeId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of relationtypesData" value="{{item.Id}}" > {{item.RelationName}} </option>
+                            <option *ngFor="let  item of relationtypesData" value="{{item.Id}}" > {{item.Name}} </option>
                         </select>
 
                         <!-- <input type="number" name="txtcode" id="txtcode" class="form-control"
