--- a/src/app/components/familyeducationdetails/familyeducationdetails.component.html
+++ b/src/app/components/familyeducationdetails/familyeducationdetails.component.html
@@ -23,7 +23,7 @@
                     <div class="col-md-3">
                         <select id="" name="QualificationName" [(ngModel)]="familyeducationdetails.QulificationtypeId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of qulificationtypeData" value="{{item.Id}}" > {{item.QulificationName}} </option>
+                            <option *ngFor="let  item of qulificationtypeData" value="{{item.Id}}" > {{item.Name}} </option>
                         </select>
                         <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
                             [(ngModel)]="familyeducationdetails.QulificationtypeId" placeholder="QulificationtypeId" /> -->
