--- a/src/app/components/institutionaddress/institutionaddress.component.html
+++ b/src/app/components/institutionaddress/institutionaddress.component.html
@@ -55,7 +55,7 @@
                         <select name="State" id="StateId" [(ngModel)]="institutionaddress.StateId" class="form-control">
                             <option value="0">Select</option>
                             <option *ngFor="let  item of statesData" value="{{item.Id}}" class="form-control">
-                                {{item.StateName}}</option>
+                                {{item.Name}}</option>
                         </select>
                     </div>
                     <br><br>
@@ -65,7 +65,7 @@
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="institutionaddress.CountryId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of countriesData" value="{{item.Id}}">{{item.CountryName}}</option>
+                            <option *ngFor="let  item of countriesData" value="{{item.Id}}">{{item.Name}}</option>
                         </select>
                     </div>
                     <div class="col-md-3">
