--- a/src/app/components/relationtypes/relationtypes.component.html
+++ b/src/app/components/relationtypes/relationtypes.component.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="col-md-3">
                         <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="relationtypes.RelationName" placeholder="RelationName">
+                            [(ngModel)]="relationtypes.Name" placeholder="RelationName">
                     </div>
                     <div class="col-md-3">
                         Code :
@@ -59,7 +59,7 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.RelationName}}</td>
+                                        <td>{{item.Name}}</td>
                                         <td>{{item.Code}}</td>
                                         <td><button class="btn btn-info" (click)="GetRelationTypesById(item.Id)"> Edit
                                             </button></td>
