--- a/src/app/components/states/states.component.html
+++ b/src/app/components/states/states.component.html
@@ -1,24 +1,24 @@
 <div class='dashboard-content'>
     <div class='container'>
-        <div class='card'>
-            <div class='card-header'>
-                <h1>STATES</h1>
+        <div class='card shadow-lg p-4 mb-4 bg-white'>
+            <div class='card-header' style="background-color: #007bff;color: white">
+                <h3>States</h3>
             </div>
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        StateName :
+                        State :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="states.StateName" placeholder="StateName">
+                        <input type="text" id="txtskill" class="form-control" Name="txtskill" [(ngModel)]="states.Name"
+                            placeholder="State">
                     </div>
                     <div class="col-md-3">
                         Code :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="states.Code" placeholder="Code" />
+                        <input type="text" name="txtcode" class="form-control" id="txtcode" [(ngModel)]="states.Code"
+                            placeholder="Code" />
                     </div>
                     <br><br>
                 </div>
@@ -40,12 +40,10 @@
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-12">
                         <div class="container mt-3">
-                            <h2>STATES DATA</h2>
-
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>StateName</th>
+                                        <th>State</th>
                                         <th>Code</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
@@ -59,7 +57,7 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.StateName}}</td>
+                                        <td>{{item.Name}}</td>
                                         <td>{{item.Code}}</td>
                                         <td><button class="btn btn-info" (click)="GetStatesById(item.Id)"> Edit
                                             </button></td>
