--- a/src/app/components/useraddressdetails/useraddressdetails.component.html
+++ b/src/app/components/useraddressdetails/useraddressdetails.component.html
@@ -51,7 +51,7 @@
                     <div class="col-md-3">
                        <select  id="Id" name="StateName" [(ngModel)]="useraddressdetails.StateId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of  statesData" value="{{item.Id}}" > {{item.StateName}} </option>
+                            <option *ngFor="let  item of  statesData" value="{{item.Id}}" > {{item.Name}} </option>
                         </select>
                     </div>
                     
@@ -62,7 +62,7 @@
                     <div class="col-md-3">
                         <select  id="Id" name="Name" [(ngModel)]="useraddressdetails.CountryId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of  countriesData" value="{{item.Id}}" > {{item.CountryName}} </option>
+                            <option *ngFor="let  item of  countriesData" value="{{item.Id}}" > {{item.Name}} </option>
                         </select>
                     </div>
                     
