--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -44,7 +44,7 @@
                             (change)="GoToNavigationUrl('gender', users.GenderId)">
                             <option value="-1"> Add(option) </option>
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of genderData" value="{{item.Id}}">{{item.GenderName}}</option>
+                            <option *ngFor="let  item of genderData" value="{{item.Id}}">{{item.Name}}</option>
                         </select>
                         <!-- <input type="number" name="txtcode" id="txtcode" class="form-control"
                             [(ngModel)]="users.GenderId" placeholder="GenderId" /> -->
@@ -52,12 +52,12 @@
 
                     <br><br>
                     <div class="col-md-3">
-                        MarritalStatusId :
+                        Marrital:
                     </div>
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="users.MarritalStatusId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of marritalstatusData" value="{{item.Id}}">{{item.StatusName}}
+                            <option *ngFor="let  item of marritalstatusData" value="{{item.Id}}">{{item.Name}}
                             </option>
                         </select>
                         <!-- <input type="number" name="txtcode" id="txtcode" class="form-control"
@@ -67,7 +67,7 @@
 
                     <br><br>
                     <div class="col-md-3">
-                        MobileNumber :
+                        Mobile :
                     </div>
                     <div class="col-md-3">
                         <input type="tel" name="txtcode" id="txtcode" class="form-control"
@@ -77,7 +77,7 @@
 
                     <br><br>
                     <div class="col-md-3">
-                        AadharNumber :
+                        Aadhar :
                     </div>
                     <div class="col-md-3">
                         <input type="number" name="txtcode" id="txtcode" class="form-control"
@@ -97,7 +97,7 @@
 
                     <br><br>
                     <div class="col-md-3">
-                        PanCardNumber :
+                        PanCard :
                     </div>
                     <div class="col-md-3">
                         <input type="text" name="txtcode" id="txtcode" class="form-control"
@@ -107,7 +107,7 @@
 
                     <br><br>
                     <div class="col-md-3">
-                        UserType :
+                        User Type :
                     </div>
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="users.UserTypeId" class="form-control">
@@ -131,7 +131,7 @@
                 <div class="row " style="padding-bottom: 10px;">
                     <div class="col-md-9"></div>
                     <div class="col-md-3">
-                        <button (click)="UpdateUsers()" class="btn btn-primary" *ngIf="isUpdate">Update</button>
+                        <button (click)="UpdateUser()" class="btn btn-primary" *ngIf="isUpdate">Update</button>
                     </div>
                 </div>
 
@@ -147,7 +147,7 @@
             </div>
             <div class="card-body">
                 <div class="row" style="padding-bottom: 1%;">
-                    <div class="col-md-12">
+                    <div class="col-md-12 scrolls">
                         <div class="container mt-3">
                             <h2>Users Data</h2>
     
@@ -155,16 +155,16 @@
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
                                         <th>Id</th>
-                                        <th>FirstName</th>
-                                        <th>LastName</th>
+                                        <th>First Name</th>
+                                        <th>Last Name</th>
                                         <th>Dob</th>
-                                        <th>GenderId</th>
-                                        <th>MarritalStatusId</th>
-                                        <th>MobileNumber</th>
+                                        <th>Gender</th>
+                                        <th>Marrital</th>
+                                        <th>Mobile</th>
                                         <th>VoterId</th>
-                                        <th>AadharNumber</th>
-                                        <th>PanCardNumber</th>
-                                        <th>UserTypeId</th>
+                                        <th>Aadhar</th>
+                                        <th>PanCard</th>
+                                        <th>User Type</th>
                                         <th> </th>
     
                                         <th style="text-align: center;" colspan="2">Action</th>
@@ -208,7 +208,7 @@
                                         </td>
                                         <td><button class="btn btn-info" (click)="GetUsersById(item.Id)"> Edit
                                             </button>
-                                            <button class="btn btn-danger" (click)="DeleteUsers(item.Id)"> Delete
+                                            <button class="btn btn-danger" (click)="DeleteUser(item.Id)"> Delete
                                             </button>
                                         </td>
                                     </tr>
